# triangle-intersection

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: 3d_algebra.hpp  triangle_intersection.hpp  triangle_intersection_private.hpp
src/: 3d_algebra.cpp  triangle_intersection.cpp  triangle_intersection_private.cpp
